--- a/week 01 -data/0_handle_missing_values.ipynb
+++ b/week 01 -data/0_handle_missing_values.ipynb
@@ -2,53 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7a8009cb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: numpy in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from -r requirements.txt (line 1)) (2.3.2)\n",
-      "Requirement already satisfied: pandas in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from -r requirements.txt (line 2)) (2.3.1)\n",
-      "Requirement already satisfied: scikit-learn in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from -r requirements.txt (line 3)) (1.7.1)\n",
-      "Requirement already satisfied: openai in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from -r requirements.txt (line 4)) (1.99.9)\n",
-      "Requirement already satisfied: groq in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from -r requirements.txt (line 5)) (0.31.0)\n",
-      "Requirement already satisfied: seaborn in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from -r requirements.txt (line 6)) (0.13.2)\n",
-      "Requirement already satisfied: pydantic in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from -r requirements.txt (line 7)) (2.11.7)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from pandas->-r requirements.txt (line 2)) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from pandas->-r requirements.txt (line 2)) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from pandas->-r requirements.txt (line 2)) (2025.2)\n",
-      "Requirement already satisfied: scipy>=1.8.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from scikit-learn->-r requirements.txt (line 3)) (1.16.1)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from scikit-learn->-r requirements.txt (line 3)) (1.5.1)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from scikit-learn->-r requirements.txt (line 3)) (3.6.0)\n",
-      "Requirement already satisfied: anyio<5,>=3.5.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from openai->-r requirements.txt (line 4)) (4.10.0)\n",
-      "Requirement already satisfied: distro<2,>=1.7.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from openai->-r requirements.txt (line 4)) (1.9.0)\n",
-      "Requirement already satisfied: httpx<1,>=0.23.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from openai->-r requirements.txt (line 4)) (0.28.1)\n",
-      "Requirement already satisfied: jiter<1,>=0.4.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from openai->-r requirements.txt (line 4)) (0.10.0)\n",
-      "Requirement already satisfied: sniffio in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from openai->-r requirements.txt (line 4)) (1.3.1)\n",
-      "Requirement already satisfied: tqdm>4 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from openai->-r requirements.txt (line 4)) (4.67.1)\n",
-      "Requirement already satisfied: typing-extensions<5,>=4.11 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from openai->-r requirements.txt (line 4)) (4.14.1)\n",
-      "Requirement already satisfied: annotated-types>=0.6.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from pydantic->-r requirements.txt (line 7)) (0.7.0)\n",
-      "Requirement already satisfied: pydantic-core==2.33.2 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from pydantic->-r requirements.txt (line 7)) (2.33.2)\n",
-      "Requirement already satisfied: typing-inspection>=0.4.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from pydantic->-r requirements.txt (line 7)) (0.4.1)\n",
-      "Requirement already satisfied: idna>=2.8 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from anyio<5,>=3.5.0->openai->-r requirements.txt (line 4)) (3.10)\n",
-      "Requirement already satisfied: certifi in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from httpx<1,>=0.23.0->openai->-r requirements.txt (line 4)) (2025.8.3)\n",
-      "Requirement already satisfied: httpcore==1.* in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from httpx<1,>=0.23.0->openai->-r requirements.txt (line 4)) (1.0.9)\n",
-      "Requirement already satisfied: h11>=0.16 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai->-r requirements.txt (line 4)) (0.16.0)\n",
-      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from seaborn->-r requirements.txt (line 6)) (3.10.5)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->-r requirements.txt (line 6)) (1.3.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->-r requirements.txt (line 6)) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->-r requirements.txt (line 6)) (4.59.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->-r requirements.txt (line 6)) (1.4.9)\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->-r requirements.txt (line 6)) (25.0)\n",
-      "Requirement already satisfied: pillow>=8 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->-r requirements.txt (line 6)) (11.3.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->-r requirements.txt (line 6)) (3.2.3)\n",
-      "Requirement already satisfied: six>=1.5 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas->-r requirements.txt (line 2)) (1.17.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install -r requirements.txt "
    ]
@@ -71,16 +28,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1dba82c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import openai, groq\n",
     "import seaborn as sns\n",
-    "from enum import Enum"
+    "from enum import Enum\n",
+    "from pydantic import BaseModel\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "# Load .env file\n",
+    "load_dotenv()\n"
    ]
   },
   {
@@ -1373,7 +1346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c878860",
+   "id": "766c1283",
    "metadata": {},
    "source": [
     "##### 3.2.2 Gender"
@@ -1381,17 +1354,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "59d6acd5",
+   "execution_count": 16,
+   "id": "31fc325f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Female\n"
+     ]
+    }
+   ],
    "source": [
     "class Gender(Enum):\n",
-    "    MALE = \"male\"\n",
-    "    FEMALE = \"female\"\n",
+    "    MALE = \"Male\"\n",
+    "    FEMALE = \"Female\"\n",
+    "\n",
+    "class GenderPrediction(BaseModel):\n",
+    "    firstname : str\n",
+    "    lastname : str\n",
+    "    gender : Gender\n",
+    "\n",
+    "def predict_gender(firstname: str, lastname: str):\n",
+    "    prompt = f\"\"\"\n",
+    "            What is the most likely gender for some with first name {firstname} \n",
+    "            and last name {lastname}\n",
+    "\n",
+    "            Your response only consist with only one name: Male or Female\n",
+    "    \"\"\"\n",
+    "\n",
+    "    response = groq.Groq(\n",
+    "        api_key= os.getenv(\"GROQ_API_KEY\")\n",
+    "    ).chat.completions.create(\n",
+    "        messages= [\n",
+    "            {\n",
+    "                \"role\" : \"user\",\n",
+    "                \"content\" : prompt\n",
+    "            }\n",
+    "        ],\n",
+    "        model  = \"llama-3.3-70b-versatile\"  \n",
+    "           \n",
+    "    )\n",
+    "\n",
+    "    predicted_gender = response.choices[0].message.content.strip()\n",
+    "    return predicted_gender\n",
     "\n",
     "\n",
-    "class GenderPrediction()"
+    "print(predict_gender(\"thisari\",\"sandamini\"))\n",
+    "\n",
+    "\n",
+    "    "
    ]
   }
  ],
