--- a/week 01 -data/0_handle_missing_values.ipynb
+++ b/week 01 -data/0_handle_missing_values.ipynb
@@ -2,10 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "7a8009cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from -r requirements.txt (line 1)) (2.3.2)\n",
+      "Requirement already satisfied: pandas in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from -r requirements.txt (line 2)) (2.3.1)\n",
+      "Requirement already satisfied: scikit-learn in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from -r requirements.txt (line 3)) (1.7.1)\n",
+      "Requirement already satisfied: openai in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from -r requirements.txt (line 4)) (1.99.9)\n",
+      "Requirement already satisfied: groq in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from -r requirements.txt (line 5)) (0.31.0)\n",
+      "Requirement already satisfied: seaborn in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from -r requirements.txt (line 6)) (0.13.2)\n",
+      "Requirement already satisfied: pydantic in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from -r requirements.txt (line 7)) (2.11.7)\n",
+      "Requirement already satisfied: python-dotenv in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from -r requirements.txt (line 8)) (1.1.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from pandas->-r requirements.txt (line 2)) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from pandas->-r requirements.txt (line 2)) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from pandas->-r requirements.txt (line 2)) (2025.2)\n",
+      "Requirement already satisfied: scipy>=1.8.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from scikit-learn->-r requirements.txt (line 3)) (1.16.1)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from scikit-learn->-r requirements.txt (line 3)) (1.5.1)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from scikit-learn->-r requirements.txt (line 3)) (3.6.0)\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from openai->-r requirements.txt (line 4)) (4.10.0)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from openai->-r requirements.txt (line 4)) (1.9.0)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from openai->-r requirements.txt (line 4)) (0.28.1)\n",
+      "Requirement already satisfied: jiter<1,>=0.4.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from openai->-r requirements.txt (line 4)) (0.10.0)\n",
+      "Requirement already satisfied: sniffio in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from openai->-r requirements.txt (line 4)) (1.3.1)\n",
+      "Requirement already satisfied: tqdm>4 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from openai->-r requirements.txt (line 4)) (4.67.1)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.11 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from openai->-r requirements.txt (line 4)) (4.14.1)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from pydantic->-r requirements.txt (line 7)) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.33.2 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from pydantic->-r requirements.txt (line 7)) (2.33.2)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from pydantic->-r requirements.txt (line 7)) (0.4.1)\n",
+      "Requirement already satisfied: idna>=2.8 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from anyio<5,>=3.5.0->openai->-r requirements.txt (line 4)) (3.10)\n",
+      "Requirement already satisfied: certifi in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from httpx<1,>=0.23.0->openai->-r requirements.txt (line 4)) (2025.8.3)\n",
+      "Requirement already satisfied: httpcore==1.* in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from httpx<1,>=0.23.0->openai->-r requirements.txt (line 4)) (1.0.9)\n",
+      "Requirement already satisfied: h11>=0.16 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai->-r requirements.txt (line 4)) (0.16.0)\n",
+      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from seaborn->-r requirements.txt (line 6)) (3.10.5)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->-r requirements.txt (line 6)) (1.3.3)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->-r requirements.txt (line 6)) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->-r requirements.txt (line 6)) (4.59.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->-r requirements.txt (line 6)) (1.4.9)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->-r requirements.txt (line 6)) (25.0)\n",
+      "Requirement already satisfied: pillow>=8 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->-r requirements.txt (line 6)) (11.3.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn->-r requirements.txt (line 6)) (3.2.3)\n",
+      "Requirement already satisfied: six>=1.5 in /home/dasith/anaconda3/envs/bprml/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas->-r requirements.txt (line 2)) (1.17.0)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install -r requirements.txt "
    ]
@@ -28,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "1dba82c9",
    "metadata": {},
    "outputs": [
@@ -38,7 +82,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "28af05d6",
    "metadata": {},
    "outputs": [
@@ -436,7 +480,7 @@
        "14         65951.65       0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "429e53e6",
    "metadata": {},
    "outputs": [
@@ -473,7 +517,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "cf0133f6",
    "metadata": {},
    "outputs": [
@@ -799,7 +843,7 @@
        "[9337 rows x 15 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "4a656d94",
    "metadata": {},
    "outputs": [
@@ -1040,7 +1084,7 @@
        "[10000 rows x 11 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "0b9f13fd",
    "metadata": {},
    "outputs": [
@@ -1105,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "b32612d3",
    "metadata": {},
    "outputs": [
@@ -1115,7 +1159,7 @@
        "<Axes: xlabel='Age', ylabel='Count'>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1136,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "id": "596690b4",
    "metadata": {},
    "outputs": [
@@ -1296,7 +1340,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "4280aeb6",
    "metadata": {},
    "outputs": [
@@ -1335,13 +1379,13 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "impu_copy.isnull().sum()\n"
+    "impu_copy.isnull().sum()"
    ]
   },
   {
@@ -1354,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "31fc325f",
    "metadata": {},
    "outputs": [
@@ -1405,6 +1449,32 @@
     "\n",
     "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "699c0101",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "impu_copy = df.copy()\n",
+    "impu_missing_gender = impu_copy[impu_copy['Gender'].isnull()]\n",
+    "\n",
+    "\n",
+    "for index in impu_missing_gender.index:\n",
+    "    first_name = impu_missing_gender.loc[index, \"Firstname\"]\n",
+    "    last_name  = impu_missing_gender.loc[index, \"Lastname\"]\n",
+    "    gender = predict_gender(firstname= first_name, lastname=last_name)\n",
+    "    if gender:\n",
+    "        impu_copy.loc[index, \"Gender\"] = gender\n",
+    "        print(f\"{first_name} , {last_name} : {gender}\")\n",
+    "    else:\n",
+    "        print(f\"{first_name} , {last_name} : No gender detected\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
