--- a/week 01 -data/2_feature_binnings.ipynb
+++ b/week 01 -data/2_feature_binnings.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "e7ce237c",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "be25eb43",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
        "4          1               1         79084.10       0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,19 +201,248 @@
    "id": "8f32b596",
    "metadata": {},
    "source": [
-    "350 - 580 => 'poor'\n",
-    "580 - 670 => 'fair'\n",
-    "670 - 740 => 'good'\n",
-    "740 - 800 => 'very good'\n",
-    "800 - 850 => 'excellent'"
+    "350 - 580 => 'Poor'\n",
+    "580 - 670 => 'Fair'\n",
+    "670 - 740 => 'Good'\n",
+    "740 - 800 => 'very Good'\n",
+    "800 - 850 => 'Excellent'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "317f55f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Geography</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Tenure</th>\n",
+       "      <th>Balance</th>\n",
+       "      <th>NumOfProducts</th>\n",
+       "      <th>HasCrCard</th>\n",
+       "      <th>IsActiveMember</th>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "      <th>Exited</th>\n",
+       "      <th>CreditScoreBines</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>42.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101348.88</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Fair</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>41.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>83807.86</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>112542.58</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Fair</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>42.00</td>\n",
+       "      <td>8</td>\n",
+       "      <td>159660.80</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113931.57</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Poor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>38.91</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>93826.63</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>43.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>125510.82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>79084.10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>France</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>39.00</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>96270.64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Very Good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>France</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>35.00</td>\n",
+       "      <td>10</td>\n",
+       "      <td>57369.61</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101699.77</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Poor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>36.00</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42085.58</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>42.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>75075.31</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>92888.52</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Very Good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>28.00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>130142.79</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38190.78</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Very Good</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10000 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Geography  Gender    Age  Tenure    Balance  NumOfProducts  HasCrCard  \\\n",
+       "0       France  Female  42.00       2       0.00              1          1   \n",
+       "1        Spain  Female  41.00       1   83807.86              1          0   \n",
+       "2       France  Female  42.00       8  159660.80              3          1   \n",
+       "3       France  Female  38.91       1       0.00              2          0   \n",
+       "4        Spain  Female  43.00       2  125510.82              1          1   \n",
+       "...        ...     ...    ...     ...        ...            ...        ...   \n",
+       "9995    France    Male  39.00       5       0.00              2          1   \n",
+       "9996    France    Male  35.00      10   57369.61              1          1   \n",
+       "9997    France  Female  36.00       7       0.00              1          0   \n",
+       "9998   Germany    Male  42.00       3   75075.31              2          1   \n",
+       "9999    France  Female  28.00       4  130142.79              1          1   \n",
+       "\n",
+       "      IsActiveMember  EstimatedSalary  Exited CreditScoreBines  \n",
+       "0                  1        101348.88       1             Fair  \n",
+       "1                  1        112542.58       0             Fair  \n",
+       "2                  0        113931.57       1             Poor  \n",
+       "3                  0         93826.63       0             Good  \n",
+       "4                  1         79084.10       0             None  \n",
+       "...              ...              ...     ...              ...  \n",
+       "9995               0         96270.64       0        Very Good  \n",
+       "9996               1        101699.77       0             Poor  \n",
+       "9997               1         42085.58       1             Good  \n",
+       "9998               0         92888.52       1        Very Good  \n",
+       "9999               0         38190.78       0        Very Good  \n",
+       "\n",
+       "[10000 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def custom_binning_credit_score(score):\n",
     "    if score < 580:\n",
@@ -221,11 +450,11 @@
     "    if score < 670:\n",
     "        return 'Fair' \n",
     "    if score < 740:\n",
-    "        return 'good'\n",
+    "        return 'Good'\n",
     "    if score < 800:\n",
-    "        return 'very good'\n",
+    "        return 'Very Good'\n",
     "    if score < 850:\n",
-    "        return 'excellent'\n",
+    "        return 'Excellent'\n",
     "    else:\n",
     "        assert True , 'credit score cant go beyound 850'\n",
     "\n",
@@ -255,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "784a0f37",
    "metadata": {},
    "outputs": [],
